Trying to fix dicordinvites on mobile

--- a/scss/plugin/discordinvite.scss
+++ b/scss/plugin/discordinvite.scss
@@ -12,7 +12,7 @@
 
 	.splash{
 		object-fit: cover;
-		height: 70px;
+		height: 49pt;
 		width: 100%;
 		border-top-left-radius: 7px;
 		border-top-right-radius: 7px;
