--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -163,7 +163,9 @@ section {
 		}
 
 		strong{
-			letter-spacing: 0.06em;
+			@media screen and (min-width: 800px){
+				letter-spacing: 0.06em;
+			}
 		}
 	}
 }
